decalib/log/log_train_deca_1_20210516_210011.log
Traceback (most recent call last):
  File "main.py", line 5, in <module>
    from deca_solver import deca_solver
  File "/mnt/lustre/wuxingzhe/DECA_Pytorch/decalib/deca_solver.py", line 30, in <module>
    from datasets.test_datasets import QualitativeTestData
  File "/mnt/lustre/wuxingzhe/DECA_Pytorch/decalib/datasets/test_datasets.py", line 159
    E 'seg_mask': torch.tensor(seg_mask).float(),
      ^
SyntaxError: invalid syntax
srun: error: SH-IDC1-10-5-37-43: task 0: Exited with exit code 1
